//! Event-driven port of scripts/mesh_sim.py (kiosk-pool semantics).
//! Summary-only: no trace emission — fastsim is the sweeps/CI engine;
//! the Python sim remains the visual-trace generator.

use crate::inputs::*;
use crate::rng::Rng;
use crate::solar::SiteSolar;
use std::cmp::Reverse;
use std::collections::{BinaryHeap, HashMap, HashSet};
use std::sync::Arc;

pub const SLOT_S: f64 = 0.040;
pub const CARRIER_SENSE_DBM: f64 = -124.0;
pub const REVIVE_FRACTION: f64 = 0.05;
/// Low-power-listening CAD cadence.  A receiver must overlap the LoRa
/// preamble for at least two symbols during its deterministic awake window.
pub const CAD_PERIOD_S: f64 = 1.0;
pub const CAD_MIN_SYMBOLS: f64 = 2.0;
pub const TREELINE_M: f64 = 1100.0;
pub const LATENCY_SAMPLE_CAP: usize = 2000;
/// End-to-end lifetime for one logical packet. Events that outlive this bound
/// are discarded rather than transmitting after their accounting record has
/// already been settled as a failure.
pub const PACKET_TTL_S: f64 = 600.0;
pub const FORWARD_EWMA_DECAY: f64 = 0.995;

pub const RNG_TRAFFIC_TELEMETRY: u64 = 0x5452_4146_5400_0001;
pub const RNG_TRAFFIC_BEACON: u64 = 0x5452_4146_4200_0002;
pub const RNG_TRAFFIC_FAMILY: u64 = 0x5452_4146_4600_0003;
pub const RNG_TRAFFIC_MESSAGE: u64 = 0x5452_4146_4d00_0004;
pub const RNG_INCIDENT_OCCURRENCE: u64 = 0x494e_435f_4f43_4301;
pub const RNG_INCIDENT_TIME: u64 = 0x494e_435f_5449_4d02;
pub const RNG_INCIDENT_SENDER: u64 = 0x494e_435f_5345_4e03;
pub const RNG_MAC_BUSY_BACKOFF: u64 = 0x4d41_435f_4255_5301;
pub const RNG_MAC_DIFS: u64 = 0x4d41_435f_4449_4602;
pub const RNG_MAC_REBROADCAST: u64 = 0x4d41_435f_5245_4203;
pub const RNG_PHY: u64 = 0x5048_5900_0000_0004;
pub const RNG_CAD_PHASE: u64 = 0x4341_445f_5048_4105;
pub const RNG_LATENCY_SAMPLE: u64 = 0x4c41_545f_5341_4d06;
/// Wake-up-radio decoder-miss draws: a fresh stateless keyed domain.  Keys are
/// the collision-safe `event_draw_key` combine of (packet id, (tx<<32)|rx),
/// so different forwarders of the same packet draw independently and skipped
/// draws (awake receivers) can never shift any other stream.
pub const RNG_WUR_MISS: u64 = 0x5755_525f_4d49_5307;

#[derive(Clone, Copy, PartialEq, Eq)]
pub enum Mode {
    Flood,
    MinHop,
    Etx,
    EnergyAware,
    LbEnergy,
    DutySync,
    DutyAdaptive,
    RotateLb,
    SelectiveDuty,
    /// Wake-up radio: solar relays sleep at `wur_idle_ma` and are woken per
    /// frame by a chirp on a worse wake channel (data sensitivity + delta).
    /// docs/wur-design-2026-07-31.md (v2); MODEL-ONLY.
    Wur,
}

impl Mode {
    pub fn parse(s: &str) -> Option<Mode> {
        Some(match s {
            "flood" => Mode::Flood,
            "min_hop" => Mode::MinHop,
            "etx" => Mode::Etx,
            "energy_aware" => Mode::EnergyAware,
            "lb_energy" => Mode::LbEnergy,
            "duty_sync" => Mode::DutySync,
            "duty_adaptive" => Mode::DutyAdaptive,
            "rotate_lb" => Mode::RotateLb,
            "selective_duty" => Mode::SelectiveDuty,
            "wur" => Mode::Wur,
            _ => return None,
        })
    }
    /// Wur is deliberately included: it inherits the duty-mode wake machinery
    /// (construction-time tree init, same-event rebuild on availability
    /// transitions, duty-split energy accounting) with explicit Wur arms at
    /// every duty consumer (duty assignment, CAD acquisition, TX baseline,
    /// duty_miss accounting, weight_mode, duty_wake_model labeling).
    pub fn is_duty(self) -> bool {
        matches!(
            self,
            Mode::DutySync
                | Mode::DutyAdaptive
                | Mode::RotateLb
                | Mode::SelectiveDuty
                | Mode::Wur
        )
    }
    pub fn is_routed(self) -> bool {
        !matches!(self, Mode::Flood)
    }
    /// duty modes route with lb_energy weights
    pub fn weight_mode(self) -> Mode {
        match self {
            // Wur composes with the energy_aware tree.  This arm must precede
            // the is_duty() default, which would silently hand it lb_energy
            // weights (spec §3 silent-default trap list).
            Mode::Wur => Mode::EnergyAware,
            _ if self.is_duty() => Mode::LbEnergy,
            _ => self,
        }
    }
}

#[derive(Clone, Copy, PartialEq, Eq, Debug)]
pub enum Kind {
    Tel,
    Pos,
    Fam,
    Msg,
    Sos,
    Ack,
}

#[derive(Clone, Copy, PartialEq, Eq)]
pub enum Dest {
    Mqtt,
    Node(u32),
}

#[derive(Clone)]
pub struct Flight {
    pub id: u64,
    pub origin: u32,
    pub okind: Kind,
    pub bytes: u32,
    pub hop_limit: i32,
    pub dest: Dest,
    pub flood: bool,
    pub route: Option<Arc<Vec<u32>>>,
    pub sos_id: u64,  // 0 = n/a
    pub ack_for: u64, // 0 = n/a
    pub is_fwd: bool,
    pub expires_at: f64,
}

pub struct PktMeta {
    pub origin: u32,
    pub t0: f64,
    pub delivered: bool,
    pub latency: f64,
}

/// Per-origin counters plus an order-independent bottom-k sample of delivered
/// latencies.  The keyed priorities make the sample uniform over packet IDs
/// without coupling results to prune timing or another RNG stream.
#[derive(Default)]
pub struct OriginAgg {
    pub sent: u64,
    pub delivered: u64,
    pub delivered_latency_count: u64,
    pub latency_sample: Vec<(u64, f64)>, // (stable priority, latency seconds)
    latency_sample_worst: Option<(usize, u64)>,
}

impl OriginAgg {
    pub fn record(&mut self, master_seed: u64, packet_id: u64, delivered: bool, latency: f64) {
        self.sent += 1;
        if !delivered {
            return;
        }
        self.delivered += 1;
        self.delivered_latency_count += 1;
        let priority =
            Rng::mix64(master_seed ^ Rng::mix64(RNG_LATENCY_SAMPLE) ^ Rng::mix64(packet_id));
        if self.latency_sample.len() < LATENCY_SAMPLE_CAP {
            self.latency_sample.push((priority, latency));
            if self
                .latency_sample_worst
                .is_none_or(|(_, worst)| priority > worst)
            {
                self.latency_sample_worst = Some((self.latency_sample.len() - 1, priority));
            }
            return;
        }
        let (worst_i, worst_priority) = self
            .latency_sample_worst
            .expect("non-empty full latency sample");
        if priority < worst_priority {
            self.latency_sample[worst_i] = (priority, latency);
            self.latency_sample_worst = self
                .latency_sample
                .iter()
                .enumerate()
                .max_by_key(|(_, (p, _))| *p)
                .map(|(i, (p, _))| (i, *p));
        }
    }
}

#[derive(Default, Clone)]
pub struct NodeStats {
    pub tx: u64,
    pub rx_ok: u64,
    pub collisions: u64,
    pub duty_misses: u64,
    /// Wur mode only, counted at TxStart independent of frame outcome: one
    /// attempt per sleeping wur receiver inside the RX gate, decomposed into
    /// below-wake-budget and decoder-miss causes.  `duty_misses` keeps its
    /// CAD meaning and is never touched in wur mode.
    pub wake_attempts: u64,
    pub wake_budget_fail: u64,
    pub wake_misses: u64,
    pub dup_suppressed: u64,
    pub tx_airtime_s: f64,
    pub energy_tx_wh: f64,
    /// Total battery Wh debited from this node (baseline segments + TX
    /// increments + wur transients).  Serialized only in wur mode.
    pub consumed_wh: f64,
    /// Energy-depletion transitions.  Repeated deplete/revive cycles remain
    /// events; availability is reported separately from unavailable time.
    pub deaths: u64,
    pub unavailable_s: f64,
    pub solar_wh: f64,
}

#[derive(Clone, Debug)]
pub enum EnergySegment {
    Active {
        listen_s: f64,
        sleep_s: f64,
        gps_s: f64,
        /// Wur main-radio boot time (drained at listen current, but kept as
        /// its own accumulator so the rate is priced explicitly and can be
        /// audited/changed without silently mispricing merged listen time).
        /// Always 0.0 outside wur mode.
        boot_s: f64,
    },
    Docked {
        seconds: f64,
        kiosk: Option<u32>,
    },
}

pub struct Node {
    pub name: String,
    pub lat: f64,
    pub lon: f64,
    pub grid: bool,
    pub solar: bool,
    pub mqtt: bool,
    pub horizon: Vec<f64>,
    pub site_solar: Option<SiteSolar>,
    pub cap_wh: f64,
    pub soc_wh: f64,
    /// Battery state and forced outages are tracked independently; `alive` is
    /// their conjunction and remains the fast-path radio availability flag.
    pub energy_alive: bool,
    pub forced_outage: bool,
    pub alive: bool,
    /// Incremented on every powered-availability transition. A matching epoch
    /// at TxEnd proves the sender/receiver stayed available for the full frame.
    pub availability_epoch: u64,
    pub unavailable_since: Option<f64>,
    pub docked: bool,
    /// Rental-session counter: incremented on every dock-state change
    /// (checkout and return).  Work scheduled on behalf of one renter — the
    /// SOS retry chain — is cancelled when a pending event's generation no
    /// longer matches, so a retry cannot follow the physical radio into a
    /// later renter's session.
    pub checkout_generation: u64,
    pub duty: f64,
    /// Wur wake-transient windows (wur relays only; -1.0 = never woken).
    /// Invariant: `boot_until <= hangover_until`.  Both are set only after
    /// `accrue_node_energy_state` has banked elapsed time under the old state
    /// (the `set_docked` accrue-first-then-set pattern), so
    /// `accrue_node_energy_state` can split its interval at these boundaries
    /// with the fields constant within each call.
    pub boot_until: f64,
    pub hangover_until: f64,
    pub is_radio: bool,
    pub channel: u8,
    pub kiosk: Option<u32>, // fixed-site index of current box
    pub route: Option<u32>,
    /// Absolute simulation time when the current walk began.  Walker schedules
    /// separately retain their daily checkout phase.
    pub start_s: f64,
    pub tx_until: f64,
    /// Ordered piecewise-state energy accounting since the last global
    /// integration. State transitions first accrue elapsed time here, so the
    /// next energy step cannot apply a post-transition duty, docking state, or
    /// kiosk bank backward.
    pub energy_state_t: f64,
    pub energy_segments: Vec<EnergySegment>,
    pub fwd_ewma: f64,
    /// Global forwarding-event sequence at which fwd_ewma was last decayed.
    pub fwd_ewma_seq: u64,
    pub death_score: f64,
    pub seen: HashSet<(u32, u64)>,
    pub pending: HashMap<(u32, u64), u64>, // rebroadcast tombstones (event seq)
    pub stats: NodeStats,
}

impl Node {
    pub fn unavailable_s_through(&self, end_time: f64) -> f64 {
        self.stats.unavailable_s
            + self
                .unavailable_since
                .map_or(0.0, |t| (end_time - t).max(0.0))
    }

    pub fn availability_through(&self, end_time: f64) -> f64 {
        if end_time <= 0.0 {
            return 1.0;
        }
        (1.0 - self.unavailable_s_through(end_time) / end_time).clamp(0.0, 1.0)
    }
}

pub struct ActiveTx {
    pub start: f64,
    /// Airtime interval end.  Nominal at TxStart; pulled back to the
    /// transition instant if the sender dies, docks, or enters a forced
    /// outage mid-frame, so occupancy/interference snapshots taken after the
    /// transition see only the airtime actually radiated.
    pub end: f64,
    pub sender: u32,
    pub rssi_at: Vec<(u32, f64, u64)>,
    pub sender_availability_epoch: u64,
    /// Receivers whose awake/CAD window acquired the preamble at TxStart.
    pub cad_acquired: HashSet<u32>,
    /// Incremental TX draw above the sender's listen/sleep baseline, in
    /// watts; retained so a mid-frame abort refunds exactly the unemitted
    /// energy.
    pub incremental_tx_w: f64,
    pub flight: Flight,
}

#[derive(Default, Clone, Debug)]
pub struct BusyUnion {
    pub closed_s: f64,
    pub open: Option<(f64, f64)>,
}

impl BusyUnion {
    /// Insert intervals in nondecreasing start-time order (the event loop's
    /// transmission-start order), maintaining their exact union.
    pub fn add(&mut self, start: f64, end: f64) {
        if end <= start {
            return;
        }
        match self.open {
            None => self.open = Some((start, end)),
            Some((s, e)) if start <= e => self.open = Some((s, e.max(end))),
            Some((s, e)) => {
                self.closed_s += e - s;
                self.open = Some((start, end));
            }
        }
    }

    pub fn total_through(&self, end_time: f64) -> f64 {
        self.closed_s + self.open.map_or(0.0, |(s, e)| e.min(end_time).max(s) - s)
    }

    /// Shrink the open interval's end when an in-flight transmission is cut
    /// short.  The caller supplies the exact union end of the intervals that
    /// remain in flight; those intervals were all merged into the open
    /// interval when added (starts are nondecreasing and precede the current
    /// time), so this reproduces the union without the truncated tail.
    pub fn truncate_open_to(&mut self, new_end: f64) {
        if let Some((s, e)) = self.open {
            if new_end < e {
                self.open = Some((s, new_end.max(s)));
            }
        }
    }
}

pub struct KioskBank {
    pub soc_wh: f64,
    pub cap_wh: f64,
}

/// One logical SOS incident: the initial three-copy burst plus its retry
/// chain.
pub struct SosIncident {
    pub t0: f64,
    pub tries: u32,
    pub delivered: bool,
    pub latency_s: f64,
    /// `checkout_generation` of the originating radio when the incident was
    /// raised.  A retry firing under any other generation belongs to a
    /// returned or re-rented radio and is cancelled.
    pub origin_generation: u64,
}

pub struct Walker {
    pub route: u32,
    pub start_s: f64,
    pub kiosk: u32,
    pub return_kiosk: u32,
    pub radio: Option<u32>,
}

pub enum Ev {
    Telemetry {
        node: u32,
    },
    Beacon {
        node: u32,
    },
    Family {
        node: u32,
    },
    MsgPair {
        route: u32,
        wa: u32,
        wb: u32,
        turn: u64,
    },
    SosDay {
        day: u32,
    },
    SosSend {
        node: u32,
        sos_id: u64,
        stage: u32,
        /// Originating radio's `checkout_generation` for retry stages; zero
        /// for stage 0, which selects the sender when it fires.
        generation: u64,
    },
    SosBurst {
        node: u32,
        flight: Flight,
    },
    TxAttempt {
        node: u32,
        flight: Flight,
        tries: u32,
        post_difs: bool,
    },
    TxEnd {
        idx: u64,
    },
    RebroadcastFire {
        node: u32,
        key: (u32, u64),
        flight: Flight,
    },
    EnergyStep,
    SocSample,
    Prune,
    Dispatch {
        walker: u32,
    },
    WalkEnd {
        walker: u32,
    },
    Shuttle,
    OutageStart {
        node: u32,
    },
    OutageEnd {
        node: u32,
    },
}

pub struct Sched {
    pub t: f64,
    /// Explicit same-timestamp rank.  A frame whose airtime ends exactly when
    /// an outage/availability transition occurs has already completed, so
    /// `TxEnd` must sort ahead of every other event at an equal timestamp.
    /// Within a rank, events keep their scheduling order (stable by `seq`).
    pub prio: u8,
    pub seq: u64,
    pub ev: Ev,
}

/// Same-timestamp ordering rank for `Sched` (lower fires first).
pub fn event_rank(ev: &Ev) -> u8 {
    match ev {
        Ev::TxEnd { .. } => 0,
        _ => 1,
    }
}

impl PartialEq for Sched {
    fn eq(&self, o: &Self) -> bool {
        self.t == o.t && self.prio == o.prio && self.seq == o.seq
    }
}
impl Eq for Sched {}
impl PartialOrd for Sched {
    fn partial_cmp(&self, o: &Self) -> Option<std::cmp::Ordering> {
        Some(self.cmp(o))
    }
}
impl Ord for Sched {
    fn cmp(&self, o: &Self) -> std::cmp::Ordering {
        self.t
            .total_cmp(&o.t)
            .then(self.prio.cmp(&o.prio))
            .then(self.seq.cmp(&o.seq))
    }
}

pub struct LinkHealth {
    pub tries: u64,
    pub ok: u64,
    pub margin_sum: f64,
}

pub struct RentalStats {
    pub walker_days: u64,
    pub served: u64,
    pub starved: u64,
    pub starved_no_stock: u64,
    pub starved_unserviceable: u64,
    pub unusable_at_checkout: u64,
    pub checkout_soc_sum: f64,
}

pub struct Params {
    pub mode: Mode,
    pub days: f64,
    pub seed: u64,
    pub renters_per_route: u32,
    pub kiosk_spares: u32,
    pub sos_retry: bool,
    pub telemetry_iv: f64,
    pub beacon_iv: f64,
    pub route_refresh_s: f64,
    pub energy_step_s: f64,
    pub relay_rx_ma: f64, // fixed-site listen current (0 = config value)
    pub hiker_rx_ma: f64, // rental-radio listen current (0 = config value)
    /// Resolved at CLI parse: `--wur-delta-db` when given, else
    /// `cfg.wur.wake_sensitivity_delta_db`.  No zero sentinel — delta = 0 is
    /// the meaningful ideal-WuR bound in the E1 sweep.
    pub wur_delta_db: f64,
    /// Resolved at CLI parse: `--wur-boot-ms` when given, else
    /// `cfg.wur.main_boot_ms`.
    pub wur_boot_ms: f64,
    /// E1 wake-aware-routing control arm: edges whose receiver is a wur relay
    /// are admitted to the route tree only when q50 margin >= delta.
    pub wur_informed_tree: bool,
    pub regional_channels: bool,
    pub outages: Vec<(String, f64, f64)>, // (site, start_day, end_day)
}

pub struct Sim {
    pub cfg: Config,
    pub p: Params,
    /// Counter-based streams keyed by phenomenon and entity.  Event ordering
    /// at another node/generator cannot consume this generator's next draw.
    pub draw_counters: HashMap<(u64, u64), u64>,
    /// Slow/fast fading innovations are isolated per undirected RF link.
    pub link_rng: HashMap<(u32, u32), Rng>,
    pub now: f64,
    pub energy_last_t: f64,
    pub seq: u64,
    pub heap: BinaryHeap<Reverse<Sched>>,

    pub nodes: Vec<Node>,
    pub n_fixed: usize,
    pub name_to_idx: HashMap<String, u32>,
    pub fixed_loss: HashMap<(u32, u32), f64>,
    pub fixed_adj: Vec<Vec<(u32, f64)>>, // margin dB
    pub routes: Vec<Route>,
    pub route_site_loss: Vec<Vec<Vec<f64>>>, // [route][site][sample]
    pub walkers: Vec<Walker>,
    pub kiosk_banks: std::collections::HashMap<u32, KioskBank>,
    pub weather: Vec<(f64, f64)>,            // (kt, snow_factor)
    pub weather_calendar: Vec<(u32, usize)>, // (Gregorian day-of-year, zero-based month)
    pub start_date: String,

    pub active: HashMap<u64, ActiveTx>,
    /// Recently completed transmissions retained until every overlapping
    /// active reception is resolved.  This removes TxEnd insertion-order bias.
    pub completed_overlap: HashMap<u64, ActiveTx>,
    pub next_tx_idx: u64,
    pub pkt_seq: u64,
    pub pkt_meta: HashMap<u64, PktMeta>,
    pub agg: HashMap<u32, OriginAgg>,
    pub sos_incidents: HashMap<u64, SosIncident>,
    pub sos_acked: HashSet<u64>,

    pub route_next: Vec<Option<u32>>,
    pub route_cost: Vec<f64>,
    pub route_tree_t: f64,
    pub fwd_median: f64,
    pub forward_event_seq: u64,
    pub shadow: HashMap<(u32, u32), (f64, f64)>,
    pub link_health: HashMap<(u32, u32), LinkHealth>,
    pub rental: RentalStats,
    /// Sum of transmitter airtime.  This is offered load, not channel
    /// occupancy, because simultaneous/spatially separate TXs are additive.
    pub total_offered_airtime_s: f64,
    /// Per-node union of intervals whose received power crosses the carrier
    /// sense threshold (plus the node's own transmit intervals).
    pub local_busy: Vec<BusyUnion>,
    pub soc_series: Vec<(f64, f64, f64, f64, f64)>, // day, p10, p50, p90, std
    pub solar_profile: HashMap<(u32, u32), [f64; 24]>, // (node, day)
    pub airtime_lut: HashMap<u32, f64>,
}

impl Sim {
    pub(crate) fn event_uniform(&mut self, domain: u64, entity: u64, lo: f64, hi: f64) -> f64 {
        let counter = self.draw_counters.entry((domain, entity)).or_insert(0);
        // Preserve tuple order: XOR of separately mixed entity/counter values
        // made (entity=a, counter=b) collide with the swapped pair.
        let key = event_draw_key(entity, *counter);
        *counter += 1;
        lo + (hi - lo) * Rng::keyed_f64(self.p.seed, domain, key)
    }

    pub(crate) fn decay_forward_loads(&mut self) {
        let sequence = self.forward_event_seq;
        for node in &mut self.nodes {
            let elapsed = sequence.saturating_sub(node.fwd_ewma_seq);
            if elapsed > 0 {
                node.fwd_ewma *= FORWARD_EWMA_DECAY.powf(elapsed as f64);
                node.fwd_ewma_seq = sequence;
            }
        }
    }

    pub(crate) fn record_forward(&mut self, node: u32) {
        self.forward_event_seq = self.forward_event_seq.wrapping_add(1);
        let sequence = self.forward_event_seq;
        let target = &mut self.nodes[node as usize];
        let elapsed = sequence.saturating_sub(target.fwd_ewma_seq);
        target.fwd_ewma *= FORWARD_EWMA_DECAY.powf(elapsed as f64);
        target.fwd_ewma += 1.0;
        target.fwd_ewma_seq = sequence;
    }

    /// Fixed sites that carry WuR semantics in wur mode: non-mqtt, non-grid
    /// (the exact population the duty-assignment loop covers).  Gateways and
    /// hiker radios are never wake-gated and keep released behavior.
    pub(crate) fn is_wur_relay(&self, node: u32) -> bool {
        if self.p.mode != Mode::Wur {
            return false;
        }
        let n = &self.nodes[node as usize];
        !n.is_radio && !n.mqtt && !n.grid
    }

    pub(crate) fn accrue_node_energy_state(&mut self, node: u32) {
        let now = self.now;
        let wur_mode = self.p.mode == Mode::Wur;
        let target = &mut self.nodes[node as usize];
        let elapsed = (now - target.energy_state_t).max(0.0);
        if elapsed > 0.0 && !target.grid {
            if target.docked {
                match target.energy_segments.last_mut() {
                    Some(EnergySegment::Docked { seconds, kiosk }) if *kiosk == target.kiosk => {
                        *seconds += elapsed;
                    }
                    _ => target.energy_segments.push(EnergySegment::Docked {
                        seconds: elapsed,
                        kiosk: target.kiosk,
                    }),
                }
            } else if target.energy_alive {
                let duty = target.duty.clamp(0.0, 1.0);
                let gps_s = if target.is_radio { elapsed } else { 0.0 };
                let wur_relay = wur_mode && !target.is_radio && !target.mqtt;
                let (listen_s, sleep_s, boot_s) = if wur_relay {
                    // Split the elapsed interval at the wake-transient
                    // boundaries.  Windows are set accrue-first-then-set, so
                    // both bounds are constant within this call and the boot
                    // sub-interval can never precede `energy_state_t`.
                    // boot -> boot_s (listen-current rate); hangover ->
                    // forced listen; remainder -> normal duty split.
                    let t0 = now - elapsed;
                    let boot_hi = target.boot_until.clamp(t0, now);
                    let hangover_hi = target.hangover_until.clamp(boot_hi, now);
                    let boot_s = boot_hi - t0;
                    let hangover_s = hangover_hi - boot_hi;
                    let rest = now - hangover_hi;
                    (hangover_s + duty * rest, (1.0 - duty) * rest, boot_s)
                } else {
                    (duty * elapsed, (1.0 - duty) * elapsed, 0.0)
                };
                match target.energy_segments.last_mut() {
                    Some(EnergySegment::Active {
                        listen_s: pending_listen_s,
                        sleep_s: pending_sleep_s,
                        gps_s: pending_gps_s,
                        boot_s: pending_boot_s,
                    }) => {
                        *pending_listen_s += listen_s;
                        *pending_sleep_s += sleep_s;
                        *pending_gps_s += gps_s;
                        *pending_boot_s += boot_s;
                    }
                    _ => target.energy_segments.push(EnergySegment::Active {
                        listen_s,
                        sleep_s,
                        gps_s,
                        boot_s,
                    }),
                }
            }
        }
        target.energy_state_t = now;
    }
}

/// Collision-safe two-value key combine (shared by `event_uniform` counters
/// and the wur wake-miss draw, which keys by (packet id, (tx<<32)|rx)).
pub(crate) fn event_draw_key(entity: u64, counter: u64) -> u64 {
    Rng::mix64(
        entity.wrapping_add(0xD1B5_4A32_D192_ED03)
            ^ Rng::mix64(counter.wrapping_add(0x9E37_79B9_7F4A_7C15)),
    )
}

pub fn linear_quantile_sorted(values: &[f64], probability: f64) -> Option<f64> {
    if values.is_empty() {
        return None;
    }
    let position = probability.clamp(0.0, 1.0) * (values.len() - 1) as f64;
    let lower = position.floor() as usize;
    let upper = position.ceil() as usize;
    Some(values[lower] + (values[upper] - values[lower]) * (position - lower as f64))
}

#[cfg(test)]
mod tests {
    use super::{event_draw_key, linear_quantile_sorted, BusyUnion, OriginAgg, LATENCY_SAMPLE_CAP};

    #[test]
    fn busy_union_counts_overlaps_once() {
        let mut busy = BusyUnion::default();
        busy.add(0.0, 2.0);
        busy.add(0.5, 1.0);
        busy.add(1.5, 3.0);
        busy.add(5.0, 6.0);
        assert_eq!(busy.total_through(10.0), 4.0);
        assert_eq!(busy.total_through(5.5), 3.5);
    }

    #[test]
    fn busy_union_truncation_keeps_the_surviving_frames_exact() {
        let mut busy = BusyUnion::default();
        busy.add(0.0, 10.0);
        busy.add(2.0, 12.0);
        // The 2..12 frame aborts at t=4; the 0..10 frame is still in flight.
        busy.truncate_open_to(10.0);
        assert_eq!(busy.total_through(20.0), 10.0);
        // The 0..10 frame aborts at t=5 with nothing else in flight.
        busy.truncate_open_to(5.0);
        assert_eq!(busy.total_through(20.0), 5.0);
        // Truncation can never extend the union.
        busy.truncate_open_to(9.0);
        assert_eq!(busy.total_through(20.0), 5.0);
        // A later disjoint frame opens a new interval past the truncated one.
        busy.add(6.0, 8.0);
        assert_eq!(busy.total_through(20.0), 7.0);
    }

    #[test]
    fn latency_bottom_k_is_order_independent_and_not_early_censored() {
        let mut forward = OriginAgg::default();
        let mut reverse = OriginAgg::default();
        let count = LATENCY_SAMPLE_CAP as u64 * 3;
        for id in 1..=count {
            forward.record(123, id, true, id as f64);
        }
        for id in (1..=count).rev() {
            reverse.record(123, id, true, id as f64);
        }
        forward
            .latency_sample
            .sort_unstable_by_key(|(priority, _)| *priority);
        reverse
            .latency_sample
            .sort_unstable_by_key(|(priority, _)| *priority);
        assert_eq!(forward.latency_sample, reverse.latency_sample);
        assert_eq!(forward.latency_sample.len(), LATENCY_SAMPLE_CAP);
        assert!(forward
            .latency_sample
            .iter()
            .any(|(_, latency)| *latency > LATENCY_SAMPLE_CAP as f64));
        assert_eq!(forward.delivered_latency_count, count);
    }

    #[test]
    fn linear_quantiles_match_numpy_style_interpolation() {
        let values = [1.0, 100.0];
        assert_eq!(linear_quantile_sorted(&values, 0.5), Some(50.5));
        assert_eq!(linear_quantile_sorted(&values, 0.95), Some(95.05));
    }

    #[test]
    fn event_uniform_keeps_entity_counter_pairs_distinct_when_swapped() {
        assert_ne!(event_draw_key(0, 1), event_draw_key(1, 0));
    }
}
